add google analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/webp" href="/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>프론트엔드 | 여수정</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HG838B0VY2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-HG838B0VY2');
+    </script>
   </head>
   <body>
     <div id="root"></div>
